tests/positive/Reachability/M.juvix
module M;

import Data.Nat open;
import Data.Maybe open;
import Data.Product open;
import Data.Bool open;
import Data.Ord open;

f : Bool -> Bool
  | x := x;

g : {A : Type} -> A -> Bool -> Bool
  | x y := f y;

h : {A : Type} -> A -> Maybe Bool
  | x := nothing;
