tests/negative/ImplicitPatternLeftApplication.juvix
module ImplicitPatternLeftApplication;

f : {A : Type} -> A -> A
  | ({x} y) := y;

